--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -33,6 +33,16 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
+@media screen and (max-width: 768px) {
+  .contanier {
+    width: 768px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .contanier {
+    width: 480px;
+  }
+}
 
 .navigation {
   width: 520px;
