--- a/SASS/base/_common.scss
+++ b/SASS/base/_common.scss
@@ -27,4 +27,10 @@ body {
 .contanier {
     width: 1200px;
     margin: 0 auto;
+    @media screen and (max-width: 768px) {
+        width: 768px;
+    }
+    @media screen and (max-width: 480px) {
+        width: 480px;
+    }
 }
