--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -207,7 +207,7 @@
 
 @media screen and (max-width: 1200px) {
     .hero {
-        width: 1200px;
+        width: 100%;
         padding: 200px;
 
         &__title {
