--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -316,7 +316,7 @@
 @media screen and (max-width: 480px){
     .hero{
         width: 480px;
-        height: 400px;
+        // height: 400px;
         background-color: getColor('background');
         padding: 118px 0;
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/mobile.png");
