--- a/CSS/main.css
+++ b/CSS/main.css
@@ -531,6 +531,7 @@ body {
 @media screen and (max-width: 480px) {
   .hero {
     width: 480px;
+    height: 400px;
     background-color: rgba(47, 48, 58, 0.8);
     padding: 118px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/mobile.png");
