--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -319,7 +319,7 @@
         height: 400px;
         background-color: getColor('background');
         padding: 118px 0;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/mobile.png");
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/mobile.png");
         background-size: cover;
     }
 }
