--- a/CSS/main.css
+++ b/CSS/main.css
@@ -476,7 +476,7 @@ body {
   .hero {
     background-color: rgba(47, 48, 58, 0.8);
     padding: 200px 0;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/tablet.png");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/tablet.png");
     background-size: cover;
     width: 768px;
     padding: 118px;
