--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -266,7 +266,7 @@
     .hero{
         background-color: getColor('background');
         padding: 200px 0;
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/tablet.png");
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/tablet.png");
         background-size: cover;
         width: 768px;
         padding: 118px;
