--- a/SASS/utils/variables.scss
+++ b/SASS/utils/variables.scss
@@ -11,6 +11,7 @@ $colors:(
     'footer': #2F303A,
     'backdrop': #00000033,
     'header-border': #bbbbbb,
+    'cards': #EEE,
 );
 
 @function getColor($key) {
