--- a/CSS/main.css
+++ b/CSS/main.css
@@ -54,6 +54,9 @@ body {
   width: 520px;
   padding: 24px 0px;
 }
+.navigation__svg {
+  display: none;
+}
 
 .menu-right {
   width: 333px;
@@ -90,7 +93,6 @@ body {
 
 .logo {
   width: 145px;
-  height: 31px;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -146,6 +148,10 @@ body {
   .header__container {
     width: 1200px;
     height: 80px;
+    border-bottom: 1px solid #bbbbbb;
+  }
+  .navigation__svg {
+    display: none;
   }
   .menu-right {
     display: flex;
@@ -163,6 +169,7 @@ body {
   .header__container {
     width: 768px;
     height: 80px;
+    border-bottom: 1px solid #bbbbbb;
   }
   .menu-right {
     display: flex;
@@ -199,9 +206,24 @@ body {
 @media screen and (max-width: 480px) {
   .header__container {
     width: 480px;
+    height: 59px;
+    border-bottom: 1px solid #bbbbbb;
   }
   .menu-right, .header-list {
     display: none;
+  }
+  .logo {
+    padding: 6px 0;
+  }
+  .navigation {
+    padding: 10px 0;
+    justify-content: center;
+    gap: 190px;
+  }
+  .navigation__svg {
+    display: block;
+    width: 40px;
+    height: 40px;
   }
 }
 .hero {
@@ -443,7 +465,7 @@ body {
   }
   .hero-modal__text {
     margin: 20px 0 30px 0;
-    width: 346px;
+    width: 100%;
     height: 14px;
     font-weight: 400;
     font-size: 12px;
@@ -495,11 +517,10 @@ body {
   }
   .hero-modal {
     width: 450px;
-    height: 609px;
   }
   .hero-modal__text {
     margin: 20px 0 30px 0;
-    width: 346px;
+    width: 100%;
     height: 14px;
     font-weight: 400;
     font-size: 12px;
@@ -516,7 +537,7 @@ body {
     height: 14px;
   }
   .hero-modal__submit {
-    margin: 0 105px;
+    margin: 0 90px;
   }
   .modal-list__input {
     width: 370px;
@@ -536,6 +557,9 @@ body {
     padding: 118px 0;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/mobile.png");
     background-size: cover;
+  }
+  .backdrop {
+    width: 480px;
   }
 }
 .features {
