--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -48,6 +48,9 @@ body {
   width: 520px;
   padding: 24px 0px;
 }
+.navigation__svg {
+  display: none;
+}
 
 .menu-right {
   width: 333px;
@@ -84,7 +87,6 @@ body {
 
 .logo {
   width: 145px;
-  height: 31px;
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -140,6 +142,10 @@ body {
   .header__container {
     width: 1200px;
     height: 80px;
+    border-bottom: 1px solid #bbbbbb;
+  }
+  .navigation__svg {
+    display: none;
   }
   .menu-right {
     display: flex;
@@ -157,6 +163,7 @@ body {
   .header__container {
     width: 768px;
     height: 80px;
+    border-bottom: 1px solid #bbbbbb;
   }
   .menu-right {
     display: flex;
@@ -193,9 +200,24 @@ body {
 @media screen and (max-width: 480px) {
   .header__container {
     width: 480px;
+    height: 59px;
+    border-bottom: 1px solid #bbbbbb;
   }
   .menu-right, .header-list {
     display: none;
+  }
+  .logo {
+    padding: 6px 0;
+  }
+  .navigation {
+    padding: 10px 0;
+    justify-content: center;
+    gap: 190px;
+  }
+  .navigation__svg {
+    display: block;
+    width: 40px;
+    height: 40px;
   }
 }
 .section-bth {
@@ -233,6 +255,26 @@ body {
   transition: background-color 0.2s ease-in;
 }
 
+@media screen and (max-width: 768px) {
+  .section-bth {
+    width: 768px;
+    margin: 60px 0 30px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .section-bth {
+    width: 480px;
+  }
+  .list-bth {
+    display: flex;
+    flex-wrap: wrap;
+    width: 360px;
+    justify-content: unset;
+  }
+  .list-bth__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
+}
 .thumb {
   width: 370px;
   height: 294px;
@@ -260,7 +302,6 @@ body {
 
 .section-cards {
   width: 1170px;
-  height: 1290px;
   margin: 0 auto 94px;
   padding: 0;
 }
@@ -271,7 +312,7 @@ body {
 }
 
 .cards-list__item {
-  border: 1px solid #FFF;
+  border: 1px solid #EEE;
   position: relative;
   overflow: hidden;
 }
@@ -305,6 +346,45 @@ body {
   transform: translatey(0);
 }
 
+@media screen and (max-width: 1200px) {
+  .section-cards {
+    width: 1200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .section-cards {
+    width: 768px;
+    margin: 0 auto 60px;
+  }
+  .cards-list {
+    width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .cards-list__item:nth-child(-n+8) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .section-cards {
+    width: 480px;
+  }
+  .cards-list {
+    width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .cards-list__item {
+    width: 450px;
+  }
+  .cards-list__img {
+    width: 450px;
+    height: 294px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
 .footer {
   padding: 60px 215px;
   background-color: #2F303A;
