--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -229,7 +229,7 @@
 
         &__text {
             margin: 20px 0 30px 0;
-            width: 346px;
+            width: 100%;
             height: 14px;
             @include font(400, 12px, 1.14, 0.02em);
         }
@@ -282,10 +282,9 @@
     }
     .hero-modal{
         width: 450px;
-        height: 609px;
         &__text {
             margin: 20px 0 30px 0;
-            width: 346px;
+            width: 100%;
             height: 14px;
             @include font(400, 12px, 1.14, 0.02em);
         }
@@ -296,7 +295,7 @@
             height: 14px;
         }
         &__submit{
-            margin: 0 105px;
+            margin: 0 90px;
         }
     }
     .modal-list{
@@ -321,5 +320,8 @@
         padding: 118px 0;
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/mobile.png");
         background-size: cover;
+    }
+    .backdrop{
+        width: 480px;
     }
 }
