--- a/SASS/components/_portfolio-bth.scss
+++ b/SASS/components/_portfolio-bth.scss
@@ -31,3 +31,25 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     transition: background-color 0.2s ease-in;
 }
+
+@media screen and (max-width: 768px) {
+    .section-bth{
+        width: 768px;
+        margin: 60px 0 30px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .section-bth{
+        width: 480px;
+    }
+    .list-bth{
+        display: flex;
+        flex-wrap: wrap;
+        width: 360px;
+        justify-content:unset;
+        &__item:nth-child(-n+3){
+            margin-bottom: 15px;
+        }
+    }
+}    
