--- a/SASS/components/_portfolio-main.scss
+++ b/SASS/components/_portfolio-main.scss
@@ -19,7 +19,6 @@
 
 .section-cards {
     width: 1170px;
-    height: 1290px;
     margin: 0 auto 94px;
     padding: 0;
 }
@@ -31,7 +30,7 @@
 }
 
 .cards-list__item {
-    border: 1px solid getColor('secondary');
+    border: 1px solid getColor('cards');
     position: relative;
     overflow: hidden;
 }
@@ -60,4 +59,46 @@
 
 .cards-list__item:hover .overlay {
     transform: translatey(0);
+}
+
+@media screen and (max-width: 1200px) {
+    .section-cards{
+        width: 1200px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .section-cards{
+        width: 768px;
+        margin: 0 auto 60px;
+    }
+
+    .cards-list{
+        width: 768px;
+        display: flex;
+        flex-wrap: wrap;
+        &__item:nth-child(-n+8){
+            margin-bottom: 30px;
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .section-cards{
+        width: 480px;
+    }
+    .cards-list{
+        width: 480px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        &__item{
+            width: 450px;
+        }
+        &__img{
+            width: 450px;
+            height: 294px;
+            object-fit: cover;
+        }
+    }
 }
