--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -23,6 +23,16 @@
     }
 }
 
+.nav-menu{
+    display: none;
+}
+
+
+input,
+label {
+    display: none;
+}
+
 .menu-right__icon {
     fill: getColor('third');
     margin-right: 10px;
@@ -102,9 +112,6 @@
         border-bottom: 1px solid getColor('header-border');
     }
 
-    .navigation__svg{
-        display: none;
-    }
 
     .menu-right {
         display: flex;
@@ -127,7 +134,6 @@
         height: 80px;
         border-bottom: 1px solid getColor('header-border');
     }
-
 
     .menu-right{
         display: flex;
@@ -178,4 +184,83 @@
             height: 40px;
         }
     }
+    .nav-menu{
+        display: block;
+    }
+        label {
+            display: block;
+            width: 30px;
+            height: 30px;
+            position: relative;
+            cursor: pointer;
+        }
+    
+        label span,
+        label span::before,
+        label span::after {
+            content: "";
+            display: block;
+            width: 25px;
+            height: 2px;
+            background-color: black;
+            position: absolute;
+            right: 0;
+            transition: transform 0.3s linear;
+        }
+    
+        label span::before {
+            top: -8px;
+        }
+    
+        label span::after {
+            top: 8px;
+        }
+    
+        label span {
+            top: 15px;
+        }
+    
+        .nav-menu {
+            display: none;  
+        }
+    
+        input[type="checkbox"]:checked~.nav-menu {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+    
+        .nav-menu {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 480px;
+            background-color: #fff;
+            z-index: 99;
+            padding: 48px 40px;
+        }
+
+        .nav-menu__link{
+            color: #212121;
+            @include font(500, 40px, normal, normal);
+        }
+    
+        .nav-menu__item {
+            margin: 15px 0;
+        }
+
+                input[type="checkbox"]:checked~label span {
+                    transform: rotate(-45deg);
+                }
+        
+                input[type="checkbox"]:checked~label span::before {
+                    top: 0;
+                    transform: rotate(0);
+                }
+        
+                input[type="checkbox"]:checked~label span::after {
+                    top: 0;
+                    transform: rotate(90deg);
+                }
 }
