--- a/CSS/main.css
+++ b/CSS/main.css
@@ -100,6 +100,14 @@ label {
   margin: 0 auto;
 }
 
+.header-open-menu {
+  display: none;
+}
+
+.header-form {
+  display: none;
+}
+
 .logo {
   width: 145px;
   font-family: Raleway, sans-serif;
@@ -231,75 +239,103 @@ label {
     width: 40px;
     height: 40px;
   }
-  .nav-menu {
+  .header-open-menu {
     display: block;
+    background-color: transparent;
+    border: none;
   }
-  label {
-    display: block;
-    width: 30px;
-    height: 30px;
-    position: relative;
-    cursor: pointer;
+  .is-hidden {
+    opacity: 0;
+    pointer-events: none;
   }
-  label span,
-  label span::before,
-  label span::after {
-    content: "";
-    display: block;
-    width: 25px;
-    height: 2px;
-    background-color: black;
-    position: absolute;
-    right: 0;
-    transition: transform 0.3s linear;
+  .menu-open-svg {
+    width: 40px;
+    height: 40px;
+    fill: #212121;
   }
-  label span::before {
-    top: -8px;
+  .menu-open-svg:hover, .menu-open-svg:focus {
+    fill: #2196F3;
   }
-  label span::after {
-    top: 8px;
-  }
-  label span {
-    top: 15px;
-  }
-  .nav-menu {
-    display: none;
-  }
-  input[type=checkbox]:checked ~ .nav-menu {
+  .header-form {
+    position: fixed;
+    top: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-  .nav-menu {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 480px;
-    background-color: #fff;
     z-index: 99;
+    background: #FFF;
+    width: 480px;
     padding: 48px 40px;
   }
-  .nav-menu__link {
-    color: #212121;
+  .header-form-button {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: 10px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+  }
+  .menu-close-svg {
+    width: 19px;
+    height: 19px;
+    fill: #212121;
+  }
+  .menu-close-svg:hover, .menu-close-svg:focus {
+    fill: #2196F3;
+  }
+  .header-form-list {
+    display: flex;
+    flex-direction: column;
+    gap: 34px;
+    margin-bottom: 302px;
+  }
+  .header-form-list__link {
     font-weight: 500;
     font-size: 40px;
     line-height: normal;
     letter-spacing: normal;
+    letter-spacing: 0.8px;
+    color: #212121;
   }
-  .nav-menu__item {
-    margin: 15px 0;
+  .header-form-list__link:hover, .header-form-list__link:focus {
+    color: #2196F3;
   }
-  input[type=checkbox]:checked ~ label span {
-    transform: rotate(-45deg);
+  .header-form-contacts {
+    margin-bottom: 64px;
   }
-  input[type=checkbox]:checked ~ label span::before {
-    top: 0;
-    transform: rotate(0);
+  .header-form-contacts__item {
+    color: #757575;
   }
-  input[type=checkbox]:checked ~ label span::after {
-    top: 0;
-    transform: rotate(90deg);
+  .header-form-contacts__item:hover {
+    color: #2196F3;
+  }
+  .header-form-contacts__item:nth-child(1) {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: normal;
+    letter-spacing: normal;
+    margin-bottom: 32px;
+  }
+  .header-form-contacts__item:nth-child(2) {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: normal;
+    letter-spacing: normal;
+  }
+  .header-form-network {
+    display: flex;
+  }
+  .header-form-network__item {
+    color: #2196F3;
+    padding: 0 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .header-form-network__item:nth-child(1) {
+    padding: 0 10px 0 0;
+  }
+  .header-form-network__item:nth-child(4) {
+    padding: 0 0 0 10px;
+    border: none;
   }
 }
 .hero {
