--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -52,6 +52,14 @@ label {
     }
 }
 
+.header-open-menu{
+    display: none;
+}
+
+.header-form{
+    display: none;
+}
+
 .logo {
     width: 145px;
 
@@ -184,83 +192,100 @@ label {
             height: 40px;
         }
     }
-    .nav-menu{
+    .header-open-menu{
         display: block;
+        background-color: transparent;
+        border: none;
     }
-        label {
-            display: block;
-            width: 30px;
-            height: 30px;
-            position: relative;
-            cursor: pointer;
-        }
-    
-        label span,
-        label span::before,
-        label span::after {
-            content: "";
-            display: block;
-            width: 25px;
-            height: 2px;
-            background-color: black;
-            position: absolute;
-            right: 0;
-            transition: transform 0.3s linear;
-        }
-    
-        label span::before {
-            top: -8px;
-        }
-    
-        label span::after {
-            top: 8px;
-        }
-    
-        label span {
-            top: 15px;
-        }
-    
-        .nav-menu {
-            display: none;  
-        }
-    
-        input[type="checkbox"]:checked~.nav-menu {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
-        }
-    
-        .nav-menu {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 480px;
-            background-color: #fff;
-            z-index: 99;
-            padding: 48px 40px;
-        }
 
-        .nav-menu__link{
-            color: #212121;
+    .is-hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .menu-open-svg{
+        width: 40px;
+        height: 40px;
+        fill: getColor('primary');
+        &:hover,&:focus{
+            fill: getColor('hover');
+        }
+    }
+    .header-form{
+        position: fixed;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        z-index: 99;
+        background: #FFF;
+        width: 480px;
+        // height: 796px;
+        padding: 48px 40px;
+    }
+    .header-form-button{
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        top: 10px;
+        right: 15px;
+        background-color: transparent;
+        border: none;
+    }
+    .menu-close-svg{
+        width: 19px;
+        height: 19px;
+        fill: getColor('primary');
+        &:hover,&:focus{
+            fill: getColor('hover');
+        }
+    }
+
+    .header-form-list{
+        display: flex;
+        flex-direction: column;
+        gap: 34px;
+        margin-bottom: 302px;
+
+        &__link{
             @include font(500, 40px, normal, normal);
+            letter-spacing: 0.8px;
+            color: getColor('primary');
+            &:hover,&:focus{
+                color: getColor('hover');
+            }
         }
+    }
+    .header-form-contacts{
+        margin-bottom: 64px;
+        &__item{
+        color: getColor('third');
+            &:hover{
+                color: getColor('hover');
+            }
+            &:nth-child(1) {
+                @include font(500, 34px, normal, normal);
+                margin-bottom: 32px;
+            }
+            
+            &:nth-child(2) {
+                @include font(500, 24px, normal, normal);
+            }
+        }
+    }
+    .header-form-network{
+        display: flex;
+    }
+    .header-form-network__item{
+        color: getColor('hover');
+        padding: 0 10px;
+        border-right: 1px solid rgba(33, 33, 33, 0.20);;
+        &:nth-child(1){
+            padding: 0 10px 0 0;
+        }
+        &:nth-child(4){
+            padding: 0 0 0 10px;
+            border: none;
+        }
+    }
     
-        .nav-menu__item {
-            margin: 15px 0;
-        }
-
-                input[type="checkbox"]:checked~label span {
-                    transform: rotate(-45deg);
-                }
-        
-                input[type="checkbox"]:checked~label span::before {
-                    top: 0;
-                    transform: rotate(0);
-                }
-        
-                input[type="checkbox"]:checked~label span::after {
-                    top: 0;
-                    transform: rotate(90deg);
-                }
 }
