--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -219,6 +219,7 @@ label {
         z-index: 99;
         background: #FFF;
         width: 480px;
+        height: 100%;
         // height: 796px;
         padding: 48px 40px;
     }
