--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -225,7 +225,7 @@ label {
   }
   .navigation {
     padding: 10px 0;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 190px;
   }
   .navigation__svg {
