--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -184,7 +184,7 @@ label {
     }
     .navigation{
         padding: 10px 0;
-        justify-content: center;
+        justify-content: flex-start;
         gap: 190px;
         &__svg{
             display: block;
