--- a/CSS/main.css
+++ b/CSS/main.css
@@ -79,11 +79,6 @@ body {
   display: none;
 }
 
-input,
-label {
-  display: none;
-}
-
 .menu-right__icon {
   fill: #757575;
   margin-right: 10px;
@@ -266,6 +261,7 @@ label {
     width: 480px;
     height: 100%;
     padding: 48px 40px;
+    overflow: auto;
   }
   .header-form-button {
     position: absolute;
@@ -575,6 +571,7 @@ label {
   .hero-modal {
     width: 450px;
     height: 609px;
+    overflow: auto;
   }
   .hero-modal__text {
     margin: 20px 0 30px 0;
