--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -28,11 +28,6 @@
 }
 
 
-input,
-label {
-    display: none;
-}
-
 .menu-right__icon {
     fill: getColor('third');
     margin-right: 10px;
@@ -222,6 +217,7 @@ label {
         height: 100%;
         // height: 796px;
         padding: 48px 40px;
+        overflow: auto;
     }
     .header-form-button{
         position: absolute;
