--- a/SASS/components/_hero.scss
+++ b/SASS/components/_hero.scss
@@ -4,6 +4,14 @@
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/Img.jpg");
     @extend %background-img;
 
+    @media(-webkit-min-device-pixel-ratio: 2),
+        (-o-min-device-pixel-ratio: 2/1),
+        (min-resolution: 2dppx),
+        (min-resolution: 192dpi),
+        (min-device-pixel-ratio: 2) {
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../Image/desk@2x.png);
+        }
+
     &__title{
         @include font(900, 44px, 1.36, 0.06em);
         text-align: center;
@@ -271,6 +279,15 @@
         background-size: cover;
         width: 768px;
         padding: 118px;
+
+        @media(-webkit-min-device-pixel-ratio: 2),
+            (-o-min-device-pixel-ratio: 2/1),
+            (min-resolution: 2dppx),
+            (min-resolution: 192dpi),
+            (min-device-pixel-ratio: 2) {
+                background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../Image/tablet@2x.jpg);
+            }
+
         &__title{
             @include font(900, 26px, 1.36, 0.06em);
         }
@@ -321,6 +338,14 @@
         padding: 118px 0;
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/mobile.png");
         background-size: cover;
+
+        @media(-webkit-min-device-pixel-ratio: 2),
+            (-o-min-device-pixel-ratio: 2/1),
+            (min-resolution: 2dppx),
+            (min-resolution: 192dpi),
+            (min-device-pixel-ratio: 2) {
+                background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../Image/mobile@2x.jpg);
+            }
     }
     .backdrop{
         width: 480px;
